tests/NormalTests/paczka1/fuzzy1/35010818.err
Error in line 9: WnQ1 A724 68,4
Error in line 12: LoFdT A7]4 90,]
Error in line 3: LoFdT S714 32,6
Error in line 18: LoFdT A724 37,2
Error in line 23: LoFdT A514 91,0
Error in line 28: jkMTI A670 15,6
Error in line 17: A670 A514 35,6
